test/integration/bad/lang/incomplete2.stan
transformed data {
  real x = 1.0 .^ upper[] while
}